--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
-  "name": "hello-nextjs",
+  "name": "nextbook",
   "version": "0.0.1",
-  "description": "a nextjs hello world app",
+  "description": "a nextjs book app",
   "main": "server.js",
   "scripts": {
     "start": "next"
   },
   "dependencies": {
-    "next": "^2.0.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "next": "^2.3.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-markdown": "^2.5.0",
+    "babel-plugin-transform-md-import-to-string": "^1.0.6",
+    "react-redux": "^5.0.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "next-redux-wrapper": "^1.1.2",
+    "axios": "^0.16.1"
   },
   "engines": {
     "node": "6.9.x"
   },
   "repository": {
-    "url": "https://glitch.com/#!/project/hello-nextjs"
+    "url": "https://glitch.com/#!/project/nextbook"
   },
   "license": "MIT",
   "keywords": [
     "node",
     "glitch",
-    "express"
+    "express",
+    "next"
   ]
 }
